--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   <footer class="footer mt-5">
     <div class="container">
       <div class="mb-2">
-        <img src="assets/img/logo.png" alt="Logo" style="height:40px;">
+        <img src="assets/img/durga.jpg" alt="Logo" style="height:40px;">
       </div>
       <div class="mb-2">
         <a href="#home" class="text-decoration-none text-light mx-2">Home</a>|
